[gd_scene load_steps=20 format=3 uid="uid://donrkn5p10hg"]

[ext_resource type="PackedScene" uid="uid://qqytkqopoc2b" path="res://scenes/actor.tscn" id="1_sfwbc"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_8mkfa"]
[ext_resource type="PackedScene" uid="uid://bdmk4qin1nnoh" path="res://scenes/explosion.tscn" id="2_14kcl"]
[ext_resource type="Texture2D" uid="uid://dsrobotp5hokg" path="res://assets/pico8_invaders_sprites_LARGE(1).png" id="3_pe082"]
[ext_resource type="Shader" path="res://shader/flash.gdshader" id="5_7wc2m"]
[ext_resource type="Script" path="res://scripts/PlayerMovementComponent.gd" id="5_bu2uy"]
[ext_resource type="PackedScene" uid="uid://cb7wbxbc328gn" path="res://scenes/spawner.tscn" id="6_jodfl"]
[ext_resource type="PackedScene" uid="uid://i1mmxpjpent1" path="res://scenes/player_projectile.tscn" id="7_adltq"]
[ext_resource type="AudioStream" uid="uid://bcic4d6x1k6uh" path="res://assets/audio/player_hit.wav" id="9_2fyfr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_61wk0"]
radius = 8.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ul46s"]
shader = ExtResource("5_7wc2m")
shader_parameter/enabled = false
shader_parameter/dead_pixel_threshold = 0.3

[sub_resource type="AtlasTexture" id="AtlasTexture_tyjmt"]
atlas = ExtResource("3_pe082")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_npkl5"]
atlas = ExtResource("3_pe082")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sm33"]
atlas = ExtResource("3_pe082")
region = Rect2(16, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_vnngn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyjmt")
}],
"loop": false,
"name": &"center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_npkl5")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sm33")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_skwer"]
atlas = ExtResource("3_pe082")
region = Rect2(0, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_24m36"]
atlas = ExtResource("3_pe082")
region = Rect2(8, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rc8g"]
atlas = ExtResource("3_pe082")
region = Rect2(16, 8, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_3asgt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skwer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24m36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rc8g")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Player" groups=["player"] instance=ExtResource("1_sfwbc")]
collision_mask = 52
script = ExtResource("2_8mkfa")

[node name="HealthSystem" parent="." index="0"]
collision_mask = 44
health = 1000

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthSystem" index="0"]
shape = SubResource("CircleShape2D_61wk0")

[node name="Explosion" parent="." index="1" instance=ExtResource("2_14kcl")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
shape = SubResource("CircleShape2D_61wk0")

[node name="MovementComponent" parent="." index="3"]
script = ExtResource("5_bu2uy")
input_dead_zone_squared = 20
acceleration = 800
max_speed = 300
friction = 1000

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visual" index="0"]
material = SubResource("ShaderMaterial_ul46s")
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_vnngn")
animation = &"center"

[node name="Flame" type="AnimatedSprite2D" parent="Visual" index="1"]
position = Vector2(0, 12)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_3asgt")
autoplay = "default"
frame_progress = 0.788782

[node name="LaserShooter" parent="." index="5" instance=ExtResource("6_jodfl")]
object_scene = ExtResource("7_adltq")
spawn_interval = 0.3

[node name="Marker2D" type="Marker2D" parent="LaserShooter" index="1"]
position = Vector2(0, -10)

[node name="DoubleLaserShooter" parent="." index="6" instance=ExtResource("6_jodfl")]
enabled = false
object_scene = ExtResource("7_adltq")
spawn_interval = 0.3

[node name="Marker2D" type="Marker2D" parent="DoubleLaserShooter" index="1"]
position = Vector2(5, -8)

[node name="Marker2D2" type="Marker2D" parent="DoubleLaserShooter" index="2"]
position = Vector2(-5, -8)

[node name="HitSound" type="AudioStreamPlayer2D" parent="." index="7"]
stream = ExtResource("9_2fyfr")
volume_db = -3.586

[connection signal="took_damage" from="HealthSystem" to="." method="_on_health_system_took_damage"]
[connection signal="finished" from="Explosion" to="." method="_on_explosion_finished"]
